# GRET

./: .gitignore  LICENSE  README.md  analyzer.py  cli.py  debug_room.py  main.py  pyproject.toml  requirements.txt
analysis/: dialogue.py  objects.py  secret.py
analyzers/: base.py  callgraph.py  deadcode.py  dialogues.py  flags.py  objects.py  plots.py  rooms.py  scripts.py  sounds.py  sprites.py  transitions.py
binary/: all_chunks.py  bgnd.py  dafl.py  font_.py  func.py  gms2_parsers.py  objt.py  path_.py  reader.py  room.py  scpt.py  seqn.py  shdr.py  sond.py  sprt.py  strg.py  tmln.py  vari.py
code/: decoder.py  opcodes.py
core/: cache.py  database.py  graph.py  indexer.py  models.py  parser.py
ir/: graph.py  resolver.py  semantic_graph.py  validate.py
model/: background.py  code_.py  font.py  function.py  game.py  object_.py  path_.py  room_.py  script.py  sequence.py  shader.py  sound.py  sprite.py  timeline.py  variable.py
query/: engine.py
reports/: graphviz.py  html.py  json.py  markdown.py
templates/: report.html
