[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gm-static-analyzer"
version = "1.0.0"
description = "Professional static analyzer for GameMaker decompiled projects"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "orjson>=3.9",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
graphviz = ["graphviz>=0.20"]
dev = ["mypy>=1.0", "pytest>=7.0", "ruff>=0.1"]

[project.scripts]
gm-analyzer = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "analyzers*", "reports*", "templates*"]
